--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-ga": "^3.3.1",
     "react-helmet": "^6.1.0",
     "react-konva": "^17.0.2-5",
     "react-switch": "^6.0.0",
